# run_defects

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
dash_app/: __init__.py  defect_formation_energy.py
src/run_defects/: __init__.py  fw_mod.py  query.py  submit.py  utils.py
src/run_defects/builders/: __init__.py  bulk.py  defect.py  defect_entry.py  locpot.py  mp.py  prod.py
src/run_defects/cli/: __init__.py  restart  restart_fizzled.py
