[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 42", "versioningit ~= 1.0", "wheel"]

[project]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]

authors = [{name = "Jimmy-Xuan Shen", email = "jmmshn@gmail.com"}]
dependencies = [
  'pymatgen',
  'jobflow',
  'pymatgen-analysis-defects @ git+https://github.com/materialsproject/pymatgen-analysis-defects@js_runs',
  'atomate2 @ git+https://github.com/jmmshn/atomate2@js_runs'
]
dynamic = ["version"]
keywords = ["pymatgen",]
license = {text = "modified BSD"}
name = "run_defects"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
restart_fizzled = "run_defects.cli.restart_fizzled:main"


[tool.ruff]
src = ["src"]

line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`).
select = [
  "A001",
  "A002",
  "B018",
  "D",
  "E4",
  "E7",
  "E9",
  "F",
  "I001",
  "PLE",
  "PLW",
  "RUF",
  "SLF001",
  "TCH",
  "TID251",
  "T20",
  "UP032",
  "W605",
]
ignore = ["E203", "E501", "F401"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL", "TCH"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

